force-app/src/objects/TR1__LK_SyncFieldMapping__mdt.object
<CustomObject>
    <description>Acc:10/25/2017: Sync Integration field mappings</description>
    <fields>
        <fullName>TR1__Additional_Filters__c</fullName>
        <description>Acc: Created for W-009323 Sync Contacts Functionality.</description>
        <label>Additional Filters</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LK_FieldName__c</fullName>
        <inlineHelpText>LinkedIn Field Name</inlineHelpText>
        <label>LK_FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LK_Interface__c</fullName>
        <inlineHelpText>LinkedIn Interface Name</inlineHelpText>
        <label>LK_Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TR_FieldName__c</fullName>
        <inlineHelpText>TR Field Name</inlineHelpText>
        <label>TR_FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated)LK_SyncFieldMapping</label>
    <pluralLabel>LK_SyncFieldMappings</pluralLabel>
</CustomObject>